src/css/style.css
/* ... */
.live-img-1-content span {
	float: right;
	font-weight: bold;
}

.live-img-1-content span img {
	width: 42%;
}

.team-role {
	font-size: 16px;
	font-weight: 300 !important;
	font-family: 'Montserrat', sans-serif;
}

/* FOOTER */

.footer-main {
	display: flex;
	justify-content: space-between;
	align-content: center;
	align-items: center;
	/* padding-right: 24%; */
	/* padding-left: 8%; */
	padding-top: 100px;
	max-width: 1230px;
	margin: auto;
}

.footer-input {
	position: relative;
}

.footer-text img {
	padding: 10px 25px 30px 0px;
}

.footer-img {
	position: absolute;
	right: 15px;
	bottom: 12px;
}

.footer-text p {
	font-size: 15px;
	font-weight: 400;
	line-height: 22px;
	color: #FFFFFF;
}

.footer-text h5 {
	font-size: 20px;
	font-weight: 400;
	line-height: 22px;
	padding: 21px 0;
	color: #FFFFFF;
}

.footer-input p {
	font-size: 22px;
	font-weight: 600;
	line-height: 27px;
	padding-bottom: 25px;
	color: #FFFFFF;
}

input.form-control {
	padding: 18px 70px 18px 17px;
	border-radius: 9px;
	width: 362px;
	font-size: 12px;
	font-size: 12px;
	line-height: 14px;
	color: #000000;
	font-weight: bold;
}

/* FOOTER-LAST */

.empty-line {
	padding: 23px 0 10px;
	max-width: 1230px;
	margin: auto;
	border-top: 1px solid #343434;
}

.footer-main-last {
	display: flex;
	justify-content: space-between;
	align-content: center;
	align-items: center;
	/* padding-right: 18%; */
	/* padding-left: 8%; */
	max-width: 1230px;
	margin: auto;
}

.footer-text-1 {
	font-size: 16px;
	line-height: 24px;
	font-weight: 400;
	font-family: 'Roboto', sans-serif;
	color: #808080;
}
/* ====================================================================== */
/* ====================================================================== */
/* ======================================================================*/

/* MY COLLECTION */

.my-collection {
	text-align: center;
	padding: 100px 15px 30px;
	background: linear-gradient(180deg, #011B48 0%, rgba(20, 20, 20, 0.39) 48.44%, #011B48 100%);
}

.my-collection h1 {
	font-style: normal;
	font-weight: 600;
	font-size: 92px;
	line-height: 112px;
	text-transform: uppercase;
	background: linear-gradient(180deg, #5092FF 0%, #4F4BCF 100%);
	text-fill-color: transparent;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	background-clip: text;
	margin-bottom: 15px;
}

.my-collection p {
	font-size: 20px;
	line-height: 36px;
	font-weight: 400;
	color: #FFFFFF;
}

/* YETI-START */

.my-collection-yeti {
	padding: 3rem 10px 60px;
	border-radius: 8px;
	background: transparent;
	text-align: center;
	margin: 0px auto;
}

.live-my-collection {
	display: flex;
	align-items: center;
	flex-direction: column;
	align-content: space-between;
	max-width: 415px;
	justify-content: center;
	margin: auto;
}

.live-my-collection h4 {
	font-size: 40px;
	font-weight: 700;
	line-height: 48px;
	text-align: left;
	color: #FFFFFF;
	width: 415px;
	display: flex;
	align-items: flex-end;
	justify-content: space-between;
	padding: 10px 0 0 15px;
}

.live-my-collection h4 span {
	text-align: right;
	font-weight: 300;
	font-size: 18px;
	padding-left: 19px;
	font-family: 'Roboto', sans-serif;
	line-height: 30px;
	color: #FFFFFF;
}

.live-my-collection p {
	font-size: 20px;
	font-weight: 700;
	line-height: 25px;
	font-family: 'Roboto', sans-serif;
	color: #FFFFFF;
	display: flex;
	align-items: flex-end;
	justify-content: space-between;
	width: 410px;
	padding: 10px 0 0 15px;
}

.live-my-collection p span {
	font-size: 20px;
	text-align: right;
	font-weight: 300;
	padding-left: 92px;
	font-family: 'Roboto', sans-serif;
	line-height: 30px;
	color: #FFFFFF;
}

.my-collection-yeti img {
	width: 415px;
	border-radius: 9px;
}

#customers th {
	padding-top: 30px;
	padding-bottom: 30px;
	text-align: center;
	background: linear-gradient(180deg, #1b315a 0%, #1b2d57 20%, #1b2854 75%);
	color: white;
}

tr {
	background: lightcoral;
}

/* tbody {
    border: 3px solid rgba(71, 86, 110, 0.8);
} */
table {
	border-collapse: separate;
	border-spacing: 0 18px;
	margin: 0 auto;
}

th {
	background-color: #4287f5;
	color: white;
}

th,
td {
	width: 150px;
	text-align: center;
	padding: 5px;
}

tr .custumers {
	border: 2px solid white;
}

.tableBg {
	background: linear-gradient(180deg, #011B48 0%, rgba(20, 20, 20, 0.39) 48.44%, #011B48 100%);
}

.customerbodyTable {
	background: rgba(14, 29, 52, 0.8);
	border: 1px solid #9B9BFF;
	box-sizing: border-box;
	border-radius: 10px;
}

.customerTableheadInner {
	background: rgba(14, 29, 52, 0.8);
	border: 1px solid #9B9BFF;
	box-sizing: border-box;
	border-radius: 7px;
	display: flex;
	/* align-items: center; */
	justify-content: space-between;
	align-content: center;
	padding: 20px 40px;
	/* padding: 20px 0px 20px 30px; */
;
}

p.headText {
	font-style: normal;
	font-weight: 600;
	font-size: 28px;
	line-height: 150%;
	/* identical to box height, or 42px */
	color: #FFFFFF;
}

.customerTablerow {
	display: flex;
	align-items: center;
	justify-content: space-between;
	align-content: center;
	padding: 20px 60px 20px 20px;
	margin: 20px 15px;
	border: 2px solid;
	border-image-source: linear-gradient(180deg, #5092FF 0%, #4F4BCF 100%);
	border: 1px solid transparent;
	border-radius: 7px;
	background: linear-gradient(rgba(14, 29, 52), rgba(14, 29, 52)) padding-box,              linear-gradient(180deg, #5092FF 0%, #4F4BCF 100%) border-box;
}

p.paraText {
	font-style: normal;
	font-weight: 500;
	font-size: 24px;
	line-height: 29px;
	letter-spacing: 0.05em;
	color: #A7A7A7;
}

.customerTable {
	max-width: 1232px;
	margin: auto;
}

p.headTextcenter {
	font-style: normal;
	font-weight: 600;
	font-size: 28px;
	line-height: 150%;
	color: #FFFFFF;
	text-align: center;
}

.headTextlast {
	font-style: normal;
	font-weight: 600;
	font-size: 28px;
	line-height: 150%;
	color: #FFFFFF;
	text-align: end;
}

p.paralast {
	font-style: normal;
	font-weight: 500;
	font-size: 24px;
	line-height: 29px;
	letter-spacing: 0.05em;
	color: #A7A7A7;
	text-align: end;
}
/* ... */

